[project]
name = "econuy"
version = "0.23.0"
description = "Wrangling Uruguayan economic data so you don't have to."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "openpyxl>=3.1.5",
    "opnieuw>=3.0.0",
    "pandas>=2.2.3",
    "patool>=3.1.0",
    "python-dotenv>=1.0.1",
    "selenium",
    "statsmodels",
    "tqdm>=4.67.1",
    "xlrd>=2.0.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=2.5.0",
    "recommonmark>=0.7.1",
    "sphinx-rtd-theme>=3.0.2",
    "ruff>=0.8.4",
    "matplotlib>=3.10.0",
]
